#395 Fix margins on mobile devices

--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -10,15 +10,15 @@
   height: auto;
 }
 
-/*@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .block {
-    width: 55%;
+    width: 300px;
   }
 
   .desc-box {
-    width: 95% !important;
+    width: 300px;
   }
-}*/
+}/**/
 @media only screen and (min-width: 500px) {
   .block {
     width: 300px;
